--- a/app/src/main/res/layout/activity_logic.xml
+++ b/app/src/main/res/layout/activity_logic.xml
@@ -61,13 +61,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="@drawable/bordi"
+        android:backgroundTint="@color/white"
         android:text="Sign in"
-        app:shapeAppearanceOverlay="@drawable/bordi"
         android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="@+id/button"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:shapeAppearanceOverlay="@style/ButtonSignIn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
