sistemazione grafica login page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#35d77e</color>
+    <color name="green2">#c2ffe0</color>
+    <color name="blue">#246BFD</color>
+    <color name="blueTrasparent">#14246BFD</color>
+    <color name="gray">#F5F5F5</color>
 </resources>
