--- a/app/src/main/res/drawable/edittext_background.xml
+++ b/app/src/main/res/drawable/edittext_background.xml
@@ -3,7 +3,11 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/gray"/>
-            <corners android:radius="20dp"/>
+            <corners android:radius="10dp"/>
+            <padding android:bottom="10dp"/>
+            <padding android:left="10dp"/>
+            <padding android:right="10dp"/>
+            <padding android:top="10dp"/>
         </shape>
     </item>
 </selector>
