--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LogicActivity">
+    tools:context=".LoginActivity">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/BtnLoginActivityLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="76dp"
-        android:padding="8dp"
+        android:padding="10dp"
         android:text="login"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
@@ -33,7 +33,6 @@
         android:drawablePadding="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:padding="10dp"
         android:text="Username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -44,7 +43,7 @@
         android:id="@+id/imageView"
         android:layout_width="158dp"
         android:layout_height="134dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="124dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,20 +51,20 @@
         app:srcCompat="@drawable/test" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/SignInLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
 
         android:backgroundTint="@color/blueTrasparent"
-        android:padding="8dp"
+        android:padding="10dp"
         android:text="Sign in"
         android:textColor="@color/blue"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="@+id/BtnLoginActivityLogin"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintStart_toStartOf="@+id/BtnLoginActivityLogin"
+        app:layout_constraintTop_toBottomOf="@+id/BtnLoginActivityLogin"
         app:shapeAppearanceOverlay="@style/ButtonSignIn" />
 
     <EditText
@@ -78,7 +77,6 @@
         android:drawablePadding="8dp"
         android:ems="10"
         android:inputType="text"
-        android:padding="10dp"
         android:text="Password"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
         app:layout_constraintHorizontal_bias="0.0"
