Creazione activity_main.xml e piccole migliorie grafiche activity_login.xml e activity_register.xml

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,14 +10,14 @@
         android:id="@+id/BtnLoginActivityLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
+        android:layout_marginBottom="24dp"
         android:padding="10dp"
         android:text="login"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/SignInLogin"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
         app:shapeAppearanceOverlay="@style/ButtonSignIn" />
 
     <EditText
@@ -25,7 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="116dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="40dp"
         android:background="@drawable/edittext_background"
         android:backgroundTint="@color/gray"
@@ -43,7 +43,7 @@
         android:id="@+id/imageView"
         android:layout_width="158dp"
         android:layout_height="134dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="64dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,24 +54,24 @@
         android:id="@+id/SignInLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
 
+        android:layout_marginBottom="40dp"
         android:backgroundTint="@color/blueTrasparent"
         android:padding="10dp"
         android:text="Sign in"
         android:textColor="@color/blue"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/BtnLoginActivityLogin"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/BtnLoginActivityLogin"
-        app:layout_constraintTop_toBottomOf="@+id/BtnLoginActivityLogin"
         app:shapeAppearanceOverlay="@style/ButtonSignIn" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/edittext_background"
         android:drawableLeft="@drawable/ic__lock"
         android:drawablePadding="8dp"
