--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,26 +10,27 @@
         android:id="@+id/button4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="92dp"
+        android:layout_marginBottom="64dp"
         android:text="Register"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/PasswordRegister"
         app:layout_constraintStart_toStartOf="@+id/PasswordRegister"
-        app:layout_constraintTop_toBottomOf="@+id/PasswordRegister" />
+        app:shapeAppearanceOverlay="@style/ButtonSignIn"/>
 
     <EditText
         android:id="@+id/NameRegister"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="136dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="40dp"
+        android:background="@drawable/edittext_background"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/edittext_background"/>
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
         android:id="@+id/SurnameRegister"
