--- a/app/src/main/res/drawable/shape_edit_text.xml
+++ b/app/src/main/res/drawable/shape_edit_text.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/gray"/>
+            <solid android:color="?attr/colorSecondary"/>
             <corners android:radius="10dp"/>
             <padding android:bottom="10dp"/>
             <padding android:left="10dp"/>
