--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,18 +7,19 @@
     tools:context=".LoginActivity">
 
     <Button
-        android:id="@+id/BtnLoginActivityLogin"
+        android:id="@+id/btn_Login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:padding="10dp"
-        android:text="login"
-        android:textStyle="bold"
+
+        android:text="@string/login"
+
         app:layout_constraintBottom_toTopOf="@+id/SignInLogin"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
-        app:shapeAppearanceOverlay="@style/ButtonSignIn" />
+
+        style="@style/primaryStyleButton"/>
 
     <EditText
         android:id="@+id/editTextTextPersonName"
@@ -27,13 +28,14 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="40dp"
-        android:background="@drawable/edittext_background"
-        android:backgroundTint="@color/gray"
+
         android:drawableLeft="@drawable/ic_person"
         android:drawablePadding="8dp"
         android:ems="10"
+
         android:inputType="textPersonName"
-        android:text="Username"
+        android:hint="@string/username"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,33 +56,33 @@
         android:id="@+id/SignInLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-
         android:layout_marginBottom="40dp"
-        android:backgroundTint="@color/blueTrasparent"
-        android:padding="10dp"
-        android:text="Sign in"
-        android:textColor="@color/blue"
-        android:textStyle="bold"
+
+        android:text="@string/sign_in"
+
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/BtnLoginActivityLogin"
+        app:layout_constraintEnd_toEndOf="@id/btn_Login"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/BtnLoginActivityLogin"
-        app:shapeAppearanceOverlay="@style/ButtonSignIn" />
+        app:layout_constraintStart_toStartOf="@id/btn_Login"
+
+        style="@style/secondStyleButton"/>
 
     <EditText
         android:id="@+id/editTextTextPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:background="@drawable/edittext_background"
-        android:drawableLeft="@drawable/ic__lock"
+
+        android:drawableLeft="@drawable/ic_lock"
         android:drawablePadding="8dp"
         android:ems="10"
-        android:inputType="text"
-        android:text="Password"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
+
+        android:inputType="textPassword"
+        android:hint="@string/password"
+
+        app:layout_constraintEnd_toEndOf="@id/editTextTextPersonName"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintStart_toStartOf="@id/editTextTextPersonName"
+        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
