--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,28 +3,19 @@
     <style name="Theme.UsedBooks" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blue</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimaryVariant">@color/blueTrasparent</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/gray</item>
+        <item name="colorSecondaryVariant">@color/blueTrasparent</item>
+        <item name="colorOnSecondary">@color/blue</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="editTextStyle">@style/primaryStyleEditText</item>
     </style>
 
-    <style name="AppTheme.Button" parent="Widget.AppCompat.Button.Colored">
-
-        <item name="colorPrimaryVariant">@color/white</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="background">@drawable/bordi</item>
-    </style>
-
-    <style name="leaf">
-        <item name="cornerSizeTopLeft">70%</item>
-        <!--<item name="cornerFamilyTopLeft">cut</item>-->
-        <item name="cornerSizeBottomRight">70%</item>
-        <!--<item name="cornerFamilyBottomRight">cut</item>-->
+    <style name="primaryStyleEditText" parent="@android:style/Widget.EditText">
+        <item name="android:background">@drawable/shape_edit_text</item>
     </style>
 </resources>
