--- a/app/src/main/res/values/styleButton.xml
+++ b/app/src/main/res/values/styleButton.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="styleButton" parent="AppTheme.Button">
+    <style name="styleButton" parent="ShapeAppearanceOverlay.Material3.Button">
         <item name="android:padding">10dp</item>
         <item name="android:textStyle">bold</item>
         <item name="shapeAppearanceOverlay">@style/shapeButton</item>
