--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,88 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="158dp"
-        android:layout_height="134dp"
-        android:layout_marginTop="64dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="24dp"
+        app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/test" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/editTextEmail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="40dp"
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="158dp"
+            android:layout_height="134dp"
+            android:layout_marginTop="64dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/test" />
 
-        android:drawableStart="@drawable/ic_email"
-        android:drawablePadding="8dp"
-        android:ems="10"
+        <EditText
+            android:id="@+id/editTextEmail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginEnd="40dp"
 
-        android:inputType="textEmailAddress"
-        android:hint="@string/email_address"
+            android:drawableStart="@drawable/ic_email"
+            android:drawablePadding="8dp"
+            android:ems="10"
 
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView" />
+            android:hint="@string/email_address"
+            android:inputType="textEmailAddress"
 
-    <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imageView" />
 
-        android:drawableLeft="@drawable/ic_lock"
-        android:drawablePadding="8dp"
-        android:ems="10"
+        <EditText
+            android:id="@+id/editTextTextPassword"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
 
-        android:inputType="textPassword"
-        android:hint="@string/password"
+            android:drawableLeft="@drawable/ic_lock"
+            android:drawablePadding="8dp"
+            android:ems="10"
 
-        app:layout_constraintEnd_toEndOf="@id/editTextEmail"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@id/editTextEmail"
-        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />
+            android:hint="@string/password"
+            android:inputType="textPassword"
 
-    <Button
-        android:id="@+id/btn_Login"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+            app:layout_constraintEnd_toEndOf="@id/editTextEmail"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@id/editTextEmail"
+            app:layout_constraintTop_toBottomOf="@id/editTextEmail" />
 
-        android:text="@string/login"
+        <Button
+            android:id="@+id/btn_Login"
+            style="@style/primaryStyleButton"
+            android:layout_width="0dp"
 
-        app:layout_constraintBottom_toTopOf="@+id/SignInLogin"
-        app:layout_constraintEnd_toEndOf="@id/editTextTextPassword"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@id/editTextTextPassword"
+            android:layout_height="wrap_content"
 
-        style="@style/primaryStyleButton"/>
+            android:layout_marginTop="128dp"
+            android:text="@string/login"
+            app:layout_constraintEnd_toEndOf="@id/editTextTextPassword"
 
-    <Button
-        android:id="@id/SignInLogin"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@id/editTextTextPassword"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 
-        android:text="@string/sign_in"
+        <Button
+            android:id="@+id/btn_SingIn"
+            style="@style/secondStyleButton"
+            android:layout_width="0dp"
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/btn_Login"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@id/btn_Login"
+            android:layout_height="wrap_content"
 
-        style="@style/secondStyleButton"/>
+            android:layout_marginTop="24dp"
+            android:text="@string/sign_in"
+            app:layout_constraintEnd_toEndOf="@id/btn_Login"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@id/btn_Login"
+            app:layout_constraintTop_toBottomOf="@+id/btn_Login" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
