--- a/app/src/main/res/menu/my_navigation_items.xml
+++ b/app/src/main/res/menu/my_navigation_items.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_search"
-        android:title="Prova1"/>
-        <!--android:icon=""-->
-    <item android:id="@+id/action_settings"
-        android:title="Prova2"/>
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/home"
+        android:title="home"
+        android:icon="@drawable/ic_home"/>
     <!--android:icon=""-->
-    <item android:id="@+id/action_navigation"
-        android:title="Prova3"/>
+    <item
+        android:id="@+id/search"
+        android:title="search"
+        android:icon="@drawable/ic_search"/>
+
+    <item android:id="@+id/add"
+        android:title=""/>
+
+    <item android:id="@+id/chat"
+        android:title="chat"
+        android:icon="@drawable/ic_message"/>
+
+    <item android:id="@+id/profile"
+        android:title="profile"
+        android:icon="@drawable/ic_person"/>
     <!--android:icon=""-->
 </menu>
