--- a/app/src/main/res/menu/my_navigation_items.xml
+++ b/app/src/main/res/menu/my_navigation_items.xml
@@ -11,7 +11,8 @@
         android:icon="@drawable/ic_search"/>
 
     <item android:id="@+id/add"
-        android:title=""/>
+        android:title=""
+        android:enabled="false"/>
 
     <item android:id="@+id/chat"
         android:title="chat"
