--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,11 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
-        android:name="com.example.usedbooks.ProfileFragment"
+        android:name="com.example.usedbooks.HomeFragment"
         android:layout_width="match_parent"
-        android:layout_height="675dp"
+        android:layout_height="600dp"
+        android:layout_gravity="top"
+        app:layout_anchor="@+id/bottomAppBar"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
